--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="mainScreen_elements">
 
             <h1>
-              Танцуй<br>
+              Танцуйте<br>
               Гори как пламя!
             </h1>
 
